--- a/campus.html
+++ b/campus.html
@@ -13,8 +13,33 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Playfair+Display:ital,wght@1,500&display=swap" rel="stylesheet">
+
+        <script src="https://unpkg.com/vue/dist/vue.js"></script>
+        <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
     </head>
     <body>
-        
+        <div class="campusMain">
+            <div class="campusText">
+                <h1 class="campusText"> CAMPUS LIFE </h1>
+            </div>
+            <div class="campusHome">
+                <span style="white-space: nowrap;">
+                    <a href="main.html" title="Home"> Home </a>
+                </span>
+                <i class="fas fa-arrow-right" aria-hidden="true" class="toCampus" style="color: aliceblue;"></i>             
+                <span style="white-space: nowrap;"> 
+                    <a href="campus.html" title="Campus Life"> Campus Life </a>
+                </span>
+            </div>
+        </div>
+
+        <div class="generalReviews">
+            <div class="generalLeft">
+
+            </div>
+            <div class="generalRight">
+                
+            </div>
+        </div>
     </body>
 </html>
