--- a/main.html
+++ b/main.html
@@ -97,7 +97,7 @@
                                     Register
                                 </span>
                             </a>
-                            <a href="#">
+                            <a href="campus.html">
                                 <span class="icon">
                                     <i class="fas fa-home"></i>
                                 </span>
