--- a/campus.html
+++ b/campus.html
@@ -26,20 +26,151 @@
                 <span style="white-space: nowrap;">
                     <a href="main.html" title="Home"> Home </a>
                 </span>
-                <i class="fas fa-arrow-right" aria-hidden="true" class="toCampus" style="color: aliceblue;"></i>             
+                <i class="fas fa-arrow-right" aria-hidden="true" class="toCampus" style="color: rgb(225, 237, 247);"></i>             
                 <span style="white-space: nowrap;"> 
                     <a href="campus.html" title="Campus Life"> Campus Life </a>
                 </span>
             </div>
         </div>
+        <div class="classJoin">
+            <h1 style="color: rgb(32, 17, 99);"> Why you should join Suleyman Demirel University </h2>
+        </div>
 
         <div class="generalReviews">
             <div class="generalLeft">
-
+                <div class="reviewsLeft">
+                    <div class="part1">
+                        <ol style="gap: 10px;">
+                            <li id="liClass"> quality teaching </li>
+                            <hr style="width: 65%;" class="hrClass">
+                            <li id="liClass"> fashionable university </li>
+                            <hr style="width: 45%;" class="hrClass">
+                            <li id="liClass"> necessary equipment </li>  
+                            <hr style="width: 80%;" class="hrClass">
+                            <li id="liClass"> classified teachers </li>  
+                            <hr style="width: 35%;" class="hrClass">
+                            <li id="liClass"> guarantee of knowledge  </li>
+                            <hr style="width: 25%;" class="hrClass">
+                        </ol>
+                    </div>
+                    <div class="part2">
+                        <div class="classJoin">
+                            <h1 style="color: rgb(32, 17, 99);"> Graduates says </h2>
+                        </div>
+                        <div class="graduatesImage">
+                            <img src="graduates.jpeg" class="graduateImg">
+                        </div>
+                        <div class="opinion">
+                            <div class="op">
+                                <div class="oppart1">
+                                    <h4> Saya, 24' </h4>
+                                    <h6> Education faculty </h6>
+                                </div>
+                                <div class="oppart2">
+                                    Studying in SDU was the best choice that i've ever made.
+                                </div>
+                            </div>
+                            <div class="op">
+                                <div class="oppart1">
+                                    <h4> Marat, 22' </h4>
+                                    <h6> Engineering faculty </h6>
+                                </div>
+                                <div class="oppart2">
+                                    SDU is the place of megaminds!
+                                </div>
+                            </div>
+                            <div class="op">
+                                <div class="oppart1">
+                                    <h4> Ermurat, 23' </h4>
+                                    <h6> Engineering faculty </h6>
+                                </div>
+                                <div class="oppart2">
+                                    Every retake that I've taken made me stronger!
+                                </div>
+                            </div>
+                            <div class="op">
+                                <div class="oppart1">
+                                    <h4> Madina, 21' </h4>
+                                    <h6> Business school </h6>
+                                </div>
+                                <div class="oppart2">
+                                    Won't forget forget traffic jams!
+                                </div>
+                            </div>
+                            <div class="op">
+                                <div class="oppart1">
+                                    <h4> Dulat, 24' </h4>
+                                    <h6> Law faculty </h6>
+                                </div>
+                                <div class="oppart2">
+                                    SDU is the place that prepares you to be the best version of yourself!
+                                </div>
+                            </div>
+                            <div class="op">
+                                <div class="oppart1">
+                                    <h4> Askhat, 23' </h4>
+                                    <h6> Engineering faculty </h6>
+                                </div>
+                                <div class="oppart2">
+                                    Still thinking about Physics in the 2nd course. Did I really needed it?
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="generalRight">
-                
+                <div class="graduates">
+                    <div class="reviews">
+                        <div class="image1Graduates">
+                            <img src="g1.jpg" class="imageGraduates">
+                        </div>
+                        <h4> Assel, 20' </h4>
+                        <h6> Business school </h6>
+
+                        <div class="reviewspart1">
+                            Admission to the SDU was the best decision in my life. 
+                            SDU helped me find friends, motivation for life and its meaning. 
+                            Now I am living my best life and I thank the SDU for that!
+                        </div>
+                    </div>
+
+                    <div class="reviews">
+                        <div class="image1Graduates">
+                            <img src="g3.jpg" class="imageGraduates">
+                        </div>
+                        <h4> Kayrat, 18' </h4>
+                        <h6> Engineering school </h6>
+
+                        <div class="reviewspart1">
+                            There are several reasons why you should join SDU.
+                            Best teachers, good people and great motivation. 
+                        </div>
+                    </div>
+
+                    <div class="reviews">
+                        <div class="image1Graduates">
+                            <img src="g2.jpg" class="imageGraduates">
+                        </div>
+                        <h4> Margarita, 19' </h4>
+                        <h6> Engineering school </h6>
+
+                        <div class="reviewspart1">
+                            You can hear that SDU is the best university.
+                            But isn't it better to see that by yourself?
+                        </div>
+                    </div>
+                </div>
             </div>
+        </div>
+
+        <div class="social-linksCampus">
+            <ul class="socialCampus">
+                <li> <a target="_blank" href="https://www.instagram.com/sdukz/" class="fab fa-instagram linksCampus"></a> </li>
+                <li> <a target="_blank" href="https://www.facebook.com/sdukz/" class="fab fa-facebook linksCampus"> </a> </li>
+                <li> <a target="_blank" href="https://sdu.edu.kz/" class="fas fa-globe linksCampus"> </a> </li>
+                <li> <a target="_blank" href="https://www.google.com/maps/place/SDU/@43.2077406,76.6694595,15.12z/data=!4m5!3m4!1s0x38834f7675d8a6c3:0x7b7d14aec270c056!8m2!3d43.2077418!4d76.6690542" class="fas fa-map-marker-alt linksCampus"> </a> </li>
+            </ul>
         </div>
     </body>
 </html>
