--- a/news.html
+++ b/news.html
@@ -48,6 +48,28 @@
         </div>
         <div class="newsContainer">
             <div class="newsChild">
+                <div class="news2">
+                    <div class="newspart3">
+                        <img src="rector.jpg" class="imageNews">
+                    </div>
+                    <div class="newspart4">
+                        <h3 class="text headline">
+                            SDU celebrates its 25th anniversary!
+                        </h3>
+                        <h3 class="text">
+                            Many thanks to our guests who took part in the 
+                            gala concert, student organizations who spoke. 
+                            We sincerely congratulate our students, teachers, 
+                            parents and alumni on their 25th birthday!
+                        </h3>
+                        <h3 class="text account" style="margin-top: 10px;">
+                            - Ms. Digital, Minister of Innovation and Aerospace Industry Baadat 
+                            Musin @bagdatmussin, Vice Minister of Education and 
+                            Science Kuanysh Yergaliev @kuanysh_yergali;
+                        </h3>
+                    </div>
+                </div>
+                <hr>
                 <div class="news1">
                     <div class="newspart1">
                         <h3 class="text headline">
