--- a/main.html
+++ b/main.html
@@ -105,7 +105,7 @@
                                     Campus
                                 </span>
                             </a>
-                            <a href="#">
+                            <a href="clubs.html">
                                 <span class="icon">
                                     <i class="fas fa-cube"></i>
                                 </span>
