--- a/news.html
+++ b/news.html
@@ -28,7 +28,7 @@
             <div class="mainNews">
                 <div class="mainText">
                     <h3 class="text headlineYears" style="font-size: 40px;">
-                        10th December there will be a gala concert dedicated to the 25th anniversary of SDU.
+                        10th December there was a gala concert dedicated to the 25th anniversary of SDU.
                     </h3>
                     <h3 class="text account" style="margin-top: 20px; margin-bottom: 20px;">
                         Limited number of seats. However, students, parents, alumni and partners are encouraged to attend the event live.
