--- a/clubs.html
+++ b/clubs.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="shortcut icon" type="image/x-icon" href="logoBlue.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles.css">
         <title> clubs </title>
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
@@ -100,9 +100,9 @@
                 <h2 class="h2-club"> SDU Club - Puzzle </h2>
             </div>
             <div class="clubs-general-pics">
-                <img src="puzzle1.jpg" class="pics-clubs-general-2">
-                <img src="puzzle2.jpg" class="pics-clubs-general-2">
-                <img src="puzzle3.jpg" class="pics-clubs-general-2">
+                <img src="puzzle1.jpg" class="pics-clubs-general-3">
+                <img src="puzzle2.jpg" class="pics-clubs-general-3">
+                <img src="puzzle3.jpg" class="pics-clubs-general-3">
             </div>
             <div class="clubs-general-opinion">
                 <div class="clubs-general-margin">
