--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="shortcut icon" type="image/x-icon" href="logoBlue.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles.css">
         <title> sdu </title>
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
@@ -43,7 +43,7 @@
                                 </span>
                             </a>
 
-                            <a href="#">
+                            <a href="business.html">
                                 <span class="icon">
                                     <i class="fas fa-business-time"></i>
                                 </span>
@@ -51,7 +51,7 @@
                                     Business 
                                 </span>
                             </a>
-                            <a href="#">
+                            <a href="engineer.html">
                                 <span class="icon">
                                     <i class="fas fa-laptop"></i>
                                 </span>
@@ -59,7 +59,7 @@
                                     Engineering
                                 </span>
                             </a>
-                            <a href="#">
+                            <a href="education.html">
                                 <span class="icon">
                                     <i class="fas fa-book"></i>
                                 </span>
@@ -67,7 +67,7 @@
                                     Education
                                 </span>
                             </a>
-                            <a href="#">
+                            <a href="law.html">
                                 <span class="icon">
                                     <i class="fas fa-gavel"></i>
                                 </span>
