--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="shortcut icon" type="image/x-icon" href="logoBlue.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles.css">
         <title> register </title>
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
@@ -58,7 +58,8 @@
                             <span class="details"> 
                                 Confirm Password
                             </span>
-                            <input type="password" placeholder="Confirm your password" id="password">
+                            <input type="password" placeholder="Confirm your password" id="password" minlength="4"
+                            maxlength="8" size="8">
                         </div>
                     </div>
                     <div class="gender-details">
