--- a/history.html
+++ b/history.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="shortcut icon" type="image/x-icon" href="logoBlue.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles.css">
         <title> history </title>
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     
