--- a/business.html
+++ b/business.html
@@ -48,8 +48,19 @@ p.border{
 </section>
 <section id = "aboutus" style="padding: 20px;">
     <h3 class="font" style = "font-size:4vw;position:relative;text-align:center; ">About our Faculty</h3>
-    <p class = "border" style = " position:relative; font-size:1.5vw;color:#777;">
-        Today SDU Business School is one of the leading business schools in our country with a prestigious international recognition both in research and education. We offer programs in all levels including foundation,undergraduate, MA and PhD programs.We continuously keep our programs updated with industry requirements. Students in our programs have a great opportunity to get ACCA, CIMA and CIM certificates. Given a light to the fact that all programs are taught in English, through academic mobility program students are able to have international educational experience in our partner world leading universities. Along with the fundamental knowledge, we teach our students to think out of the box: broadly, creatively, critically – to seek new ideas and lifelong skills by intensifying the theory with practice in order to succeed in their career path. We are very proud to affirm that our Alumni are on very high demand in local and international companies.
+    <p class = "border" style = "position:relative; font-size:100%;color:#777;">
+        Today SDU Business School is one of the leading business schools in our country 
+        with a prestigious international recognition both in research and education. 
+        We offer programs in all levels including foundation,undergraduate, MA and PhD programs. 
+        We continuously keep our programs updated with industry requirements. 
+        Students in our programs have a great opportunity to get ACCA, CIMA and CIM certificates. 
+        Given a light to the fact that all programs are taught in English, through academic 
+        mobility program students are able to have international educational experience 
+        in our partner world leading universities. Along with the fundamental knowledge, 
+        we teach our students to think out of the box: broadly, creatively, critically – 
+        to seek new ideas and lifelong skills by intensifying the theory with practice 
+        in order to succeed in their career path. We are very proud to affirm that our 
+        Alumni are on very high demand in local and international companies.
     </p>
 
 </section>
@@ -61,14 +72,14 @@ p.border{
             max-width: 400px;
             height: auto;">
             <h2 style = "color:#FF7F50">Economics</h2>
-            <p style = "color:#777; font-size:1.5vw;padding:10px;">Business Economics courses provided a thorough ground of modern theory the abilities and learning that is expected to turn into a specialist in corporate monetary administration.</p>
+            <p style = "color:#777; font-size:100%;padding:10px;">Business Economics courses provided a thorough ground of modern theory the abilities and learning that is expected to turn into a specialist in corporate monetary administration.</p>
         </div>
         <div class = "hth">
             <img class="imgRight" src = "https://yt3.ggpht.com/a/AATXAJzzRk9hmZZduVjyU-fDmJTYfuNVnyJoDJwqv80d=s900-c-k-c0xffffffff-no-rj-mo" style="width: 100%;
             max-width: 400px;
             height: auto;">
             <h2 style = "color:#FF7F50;">Finance</h2>
-            <p style = "color:#777; font-size:1.5vw;padding:10px;">
+            <p style = "color:#777; font-size:100%;padding:10px;">
                 Finance program is directed to prepare future professionals in finance in terms of needed knowledge and skills to successfully kick-start their career within top-notch financial organizations, including MNCs, in  Kazakhstan.</p>
         </div>
         <div class = "hth">
@@ -76,7 +87,7 @@ p.border{
             max-width: 400px;
             height: auto;">
             <h2 style = "color:#FF7F50">Management</h2>
-            <p style = "color:#777; font-size:1.5vw;padding:10px;">Core courses provide ground you in the fundamentals of business and general management. From microeconomics and data analytics, to management accounting and strategy, you will gain in-depth knowledge and understanding, together with a broad business overview, to drive and sustain a career promotion, in whichever sector you pursue. </p>
+            <p style = "color:#777; font-size:100%;padding:10px;">Core courses provide ground you in the fundamentals of business and general management. From microeconomics and data analytics, to management accounting and strategy, you will gain in-depth knowledge and understanding, together with a broad business overview, to drive and sustain a career promotion, in whichever sector you pursue. </p>
         </div>
     </div>
 </section>
