--- a/clubs.html
+++ b/clubs.html
@@ -17,20 +17,20 @@
     <body>
         <div class="clubsContainer">
             <div class="classJoin" style="margin-top: 10px;">
-                <h1 style="color: rgb(32, 17, 99);"> Entering SDU - means entering SDU Clubs </h2>
-                <h3 style="margin: 25px;"> Here, you will meet our best clubs! </h3>
+                <p style="color: rgb(32, 17, 99); font-size: 3.9vw;"> Entering SDU - means entering SDU Clubs </p>
+                <h3 style="margin: 25px; font-size: 2vw;"> Here, you will meet our best clubs! </h3>
                 <hr style="float: right; width: 78%;" class="hrClass">
             </div>
 
             <div class="seperation">
                 <div class="club-names">
                     <div class="club-number">
-                        <h3 class="h3-club"> DC Panem </h3>
-                        <h3 class="h3-club"> IQC Sana </h3>
-                        <h3 class="h3-club"> SDU Puzzle </h3>
-                        <h3 class="h3-club"> SDU Kings Speech </h3>
-                        <h3 class="h3-club"> SDU Mountain Kings </h3>
-                        <h3 class="h3-club"> SDU Life </h3>
+                        <p class="h3-club"> DC Panem </p>
+                        <p class="h3-club"> IQC Sana </p>
+                        <p class="h3-club"> SDU Puzzle </p>
+                        <p class="h3-club"> SDU Kings Speech </p>
+                        <p class="h3-club"> SDU Mountain Kings </p>
+                        <p class="h3-club"> SDU Life </p>
                     </div>
                 </div>
     
