--- a/education.html
+++ b/education.html
@@ -44,12 +44,12 @@ p.border{
     </nav>
     <div class = "header" style="font-family: 'Montserrat', sans-serif;">
         <h1 style = "font-size:5vw;">Faculty of Education and Humanities</h1>
-        <p style = "font-size:3vw;">Find your inspiration with us!</p>
+        <p style = "font-size:3vw; margin-top: 30px;">Find your inspiration with us!</p>
     </div>
 </section>
 <section id = "aboutus" style="padding: 1.5vw;">
     <h3 class="font" style = "font-size:4vw;position:relative;text-align:center; ">About our Faculty</h3>
-    <p class = "border" style = " position:relative; font-size:1.5vw;color:#777;">
+    <p class = "border" style = " position:relative; font-size:100%;color:#777;">
         The Faculty of Education and Humanities offers possibilities for interdisciplinary work, as well as specialization in the fields of foreign language studies, the study of a foreign language (French, Turkish or Chinese), translation studies and Kazakh language and literature. SDU students learn languages through the medium of the target foreign language.
         The Faculty of Education and Humanities offers programs of English (TEFL/TESOL), Kazakh language, and science teachers (STEM), including Humanities: Translation Studies and Philology (Linguistics). We pride ourselves on the high quality of our graduates, who are equipped with 21st century skills and are highly demanded on the market. All programs in the faculty offer contemporary courses on methods of teaching, education, translation, and research. The medium of instruction is English.
     </p>
@@ -62,7 +62,7 @@ p.border{
             max-width: 400px;
             height: auto;">
             <h2 style = "color:#BDB76B;font-size:1.7vw;">Two Foreign Languages</h2>
-            <p style = "color:#777; font-size:1.5vw;padding:10px;">
+            <p style = "color:#777; font-size:100%;padding:10px;">
                 “Foreign Language: Two Foreign Languages” program trains specialists in the field of teaching English as a foreign language as a Major and an additional foreign language as a Minor.
                </p>
         </div>
@@ -71,7 +71,7 @@ p.border{
             max-width: 400px;
             height: auto;">
             <h2 style = "color:#BDB76B;font-size:1.7vw;">Translation Studies</h2>
-            <p style = "color:#777; font-size:1.5vw;padding:10px;">
+            <p style = "color:#777; font-size:100%;padding:10px;">
                 Translation Studies program aims at training highly qualified written translators and consecutive interpreters with skills of simultaneous interpretation.</p>
         </div>
         <div class = "hth">
@@ -79,7 +79,7 @@ p.border{
             max-width: 400px;
             height: auto;">
             <h2 style = "color:#BDB76B;font-size:1.7vw;">Kazakh Language and Literature</h2>
-            <p style = "color:#777; font-size:1.5vw;padding:10px;">
+            <p style = "color:#777; font-size:100%;padding:10px;">
                 The educational program “Kazakh language and literature” is aimed to train highly qualified professionals who is able to use pedagogical psychology, information and communication technologies, pedagogical and innovative technologies in the education system.</p>
         </div>
         <div class = "hth">
@@ -87,7 +87,7 @@ p.border{
             max-width: 400px;
             height: auto;">
             <h2 style = "color:#BDB76B;font-size:1.7vw;">Philology</h2>
-            <p style = "color:#777; font-size:1.5vw;padding:10px;">
+            <p style = "color:#777; font-size:100%;padding:10px;">
                 Program based on Kazakh philology, is the training of specialists who can work at a professional level with texts in various fields, in particular, publishing, management, advertising, news agencies, government and commercial organizations, in various spheres of society.</p>
         </div>
         <div class = "hth">
@@ -95,7 +95,7 @@ p.border{
             max-width: 400px;
             height: auto;">
             <h2 style = "color:#BDB76B;font-size:1.7vw;">Foreign Philology</h2>
-            <p style = "color:#777; font-size:1.5vw;padding:10px;">Program provides a broad foundation in chemistry and biology that highlights critical thinking, scientific reasoning, and analytical problem solving with a molecular perspective. </p>
+            <p style = "color:#777; font-size:100%;padding:10px;">Program provides a broad foundation in chemistry and biology that highlights critical thinking, scientific reasoning, and analytical problem solving with a molecular perspective. </p>
         </div>
     </div>
 </section>
