--- a/engineer.html
+++ b/engineer.html
@@ -62,13 +62,13 @@ p.border{
     </nav>
     <div class = "header" style="font-family: 'Montserrat', sans-serif;">
         <h1 style = "font-size:5vw;">Faculty of Engineering and Natural sciences</h1>
-        <p style = "font-size:3vw;">
+        <p style = "font-size:3vw; margin-top: 30px;">
             Learn from the best in IT!</p>
     </div>
 </section>
 <section id = "aboutus" style="padding: 20px;">
     <h3 class="font" style = "font-size:4vw;position:relative;text-align:center; ">About our Faculty</h3>
-    <p class = "border" style = " position:relative; font-size:2vw;color:#777;" >
+    <p class = "border" style = " position:relative; font-size:100%;color:#777;" >
         The main areas taught at the Faculty of Engineering cover fundamental and advanced knowledge in the development of integrated web applications, algorithms, software designing, database systems, discrete mathematics, logical programming, cryptography, computer networks, computer simulation, and others. Additionally, information architecture, design, and processing in the information systems framework are practiced. Final year students in Mathematics are expected to study specific pedagogical issues at schools and other educational institutions.
         The Faculty of Engineering & Natural Sciences prepares future specialists in IT and technical areas.
         In our undergraduate specialties degree programs, students become high-level specialists with technical and management skills. They are familiarized with various areas in IT, and mathematics and they choose what they want to do in the before they choose their future specialism, whether it is game, from areas such as mobile or web application development, 3D modeling, data analysis, machine learning, artificial intelligence, and or even more.</p>
@@ -81,7 +81,7 @@ p.border{
             max-width: 400px;
             height: auto;">
             <h2 style = "color:#87CEFA">Information Systems</h2>
-            <p style = "color:#777; font-size:2vw;padding:10px;">
+            <p style = "color:#777; font-size:100%;padding:10px;">
                 Information Systems programme prepares students to work in computer science fields, such as system administrators, software developers, DevOps specialists, network engineers, cybersecurity specialists, IT managers, project managers, computer systems analyst, business analysts, UX/UI designers, 3D animators and game developers, and others.</p>
         </div>
         <div class = "hth">
@@ -89,7 +89,7 @@ p.border{
             max-width: 400px;
             height: auto;">
             <h2 style = "color:#87CEFA;">Computer Systems and Software</h2>
-            <p style = "color:#777; font-size:2vw;padding:10px;">
+            <p style = "color:#777; font-size:100%;padding:10px;">
                 This program prepares students for work as professionals in computer science fields, such as software developers, software project managers, data engineers, data scientists, software testers, UX/UI specialists, IoT engineers and many other professions in the field. </p>
         </div>
         <div class = "hth">
@@ -97,14 +97,14 @@ p.border{
             max-width: 400px;
             height: auto;">
             <h2 style = "color:#87CEFA">Mathematical and Computer modeling</h2>
-            <p style = "color:#777; font-size:2vw;padding:10px;">The specialty is designed for those who want to study the field of mathematical and computer modeling in the analysis of applied problems, the use of numerical methods in solving mathematical problems arising in production and technological activities.</p>
+            <p style = "color:#777; font-size:100%;padding:10px;">The specialty is designed for those who want to study the field of mathematical and computer modeling in the analysis of applied problems, the use of numerical methods in solving mathematical problems arising in production and technological activities.</p>
         </div>
         <div class = "hth">
             <img class="imgRight" src = "https://wallpapertops.com/walldb/original/0/7/f/82860.jpg" style="width: 100%;
             max-width: 400px;
             height: auto;">
             <h2 style = "color:#87CEFA">Mathematics (scientific)</h2>
-            <p style = "color:#777; font-size:2vw;padding:10px;"> Training of highly qualified specialists combining in-depth knowledge of mathematics with the skills of creative thinking, research activities that are able to independently formulate new goals, tasks of scientific research, evaluate the innovative potential of scientific development. </p>
+            <p style = "color:#777; font-size:100%;padding:10px;"> Training of highly qualified specialists combining in-depth knowledge of mathematics with the skills of creative thinking, research activities that are able to independently formulate new goals, tasks of scientific research, evaluate the innovative potential of scientific development. </p>
         </div>
     </div>
 </section>
