--- a/history.html
+++ b/history.html
@@ -77,16 +77,16 @@
     
                 <div class="coursesHistory">
                     <div>
-                        <a href="#" class="courseH"> <h3>Business</h3> </a>
+                        <a href="business.html" class="courseH"> <h3>Business</h3> </a>
                     </div>
                     <div>
-                        <a href="#" class="courseH"> <h3>Engineering</h3> </a>
+                        <a href="engineer.html" class="courseH"> <h3>Engineering</h3> </a>
                     </div>
                     <div>
-                        <a href="#" class="courseH"> <h3>Education</h3> </a>
+                        <a href="education.html" class="courseH"> <h3>Education</h3> </a>
                     </div>
                     <div>
-                        <a href="#" class="courseH"> <h3>Law</h3> </a>
+                        <a href="law.html" class="courseH"> <h3>Law</h3> </a>
                     </div>
                 </div>
             </div>
