--- a/main.html
+++ b/main.html
@@ -17,8 +17,8 @@
     <body>
         <div class="main_box" style="position: relative;">
             <div class="logo">
-                <li class="numberBig2"> SDU </li>
-                <li style="font-size: 2vw;"> Suleyman Demirel University </li>
+                <li class="numberBig2" style="font-size: 20vw;"> SDU </li>
+                <li style="font-size: 4vw;"> Suleyman Demirel University </li>
             </div>
             <div class="wrapper" id="navbar">
                 <div class="nav-toggle" id="nav-toggle">
