--- a/news.html
+++ b/news.html
@@ -27,7 +27,7 @@
             </div>
             <div class="mainNews">
                 <div class="mainText">
-                    <h3 class="text headlineYears" style="font-size: 40px;">
+                    <h3 class="text headlineYears" style="font-size: 3.3vw;">
                         10th December there was a gala concert dedicated to the 25th anniversary of SDU.
                     </h3>
                     <h3 class="text account" style="margin-top: 20px; margin-bottom: 20px;">
