--- a/register.html
+++ b/register.html
@@ -93,7 +93,7 @@
                         <textarea id="textR" cols="85" rows="auto"></textarea>
                     </div>
                     <div id="app">
-                        <md-button class="button-md-raised-md-primary" @click="download">Register</md-button>
+                        <md-button class="button-md-raised-md-primary" @click="download" style="font-size: 2.5vw;">Register</md-button>
                     </div>
                 </form>
             </div>
