--- a/engineer.html
+++ b/engineer.html
@@ -183,6 +183,6 @@ font-family: 'Montserrat', sans-serif;">
     } 
         
     today = yyyy + '-' + mm + '-' + dd;
-    document.getElementById("day").setAttribute("max", today);
+    document.getElementById("day").setAttribute("min", today);
 </script>
 </html>
