--- a/register.html
+++ b/register.html
@@ -51,7 +51,7 @@
                             <span class="details"> 
                                 Password
                             </span>
-                            <input type="password" placeholder="Enter your password">
+                            <input type="password" placeholder="Enter your password" id="p1">
                         </div>
     
                         <div class="input-box">
